# ai-ecosystem-workspace

./: .gitignore  compose.yml
backend/: .env  enqueue.py  labelstudio_test.py  logger_test.py  main.py  minio_test.py  postgres_test.py  pyproject.toml  worker_settings.py
backend/core/: config.py  logger.py
dev/: test_label.json
diagrams/: overview.drawio
sandbox/: test_settings.py
sandbox/minio/: client.py  upload_download.py  versioning.py
